# bevy_procedural_tilemaps

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
bevy_examples/: Cargo.toml
bevy_examples/src/: utils.rs
bevy_examples/tile-layers/: rules.rs  tile-layers.rs
bevy_procedural_tilemaps/: Cargo.toml  README.md
bevy_procedural_tilemaps/src/: assets.rs  default_bundles.rs  lib.rs  prelude.rs  simple_plugin.rs  spawner.rs
procedural_tilemaps_core/: Cargo.toml
procedural_tilemaps_core/src/: generator.rs  lib.rs  prelude.rs
procedural_tilemaps_core/src/generator/: builder.rs  internal_generator.rs  model.rs  node_heuristic.rs  observer.rs  rules.rs  socket.rs
procedural_tilemaps_core/src/grid/: coordinate_system.rs  direction.rs  grid.rs  mod.rs
procedural_tilemaps_core/src/grid/cartesian/: coordinates.rs  grid.rs  mod.rs
