[workspace]
resolver = "2"

members = [
	"procedural_tilemaps_core", # Core library
	"bevy_procedural_tilemaps", # Bevy integration
	"bevy_examples",            # Examples
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
procedural_tilemaps_core = { path = "procedural_tilemaps_core" }
