[package]
name = "bevy_examples"
version = "0.1.0"
publish = false
edition = "2021"
exclude = ["assets/"]

[dependencies]
# ----- Internal dependencies
bevy_procedural_tilemaps = { path = "../bevy_procedural_tilemaps", default-features = false, features = [
	"simple-plugin",
	"default-bundle-inserters",
] }

# ----- External dependencies
bevy = { version = "0.17.0", default-features = false, features = [
	"multi_threaded",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_camera",
	"bevy_sprite",
	"bevy_sprite_render",
	"bevy_image",
	"bevy_window",
	"bevy_winit",
	"png",
] }

[[example]]
name = "tile-layers"
path = "tile-layers/tile-layers.rs"
