[package]
name = "bevy_procedural_tilemaps"
version = "0.1.1"
description = "Lightweight 2D tilemap generation with Wave Function Collapse / Model Synthesis for Bevy"
repository = "https://github.com/jamesfebin/bevy_procedural_tilemaps"
documentation = "https://docs.rs/bevy_procedural_tilemaps"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "procedural-gen", "wfc", "algorithm", "bevy"]
categories = ["game-development", "algorithms"]

[features]
default = []
# Runs the generation and spawns assets when complete
simple-plugin = []
# Provides default bundle inserters for common asset handles
default-bundle-inserters = [
    "bevy/bevy_asset",
    "bevy/bevy_sprite",
    "bevy/bevy_image",
]

[dependencies]
# ----- Internal dependencies
procedural_tilemaps_core = { version = "0.1.1", features = [
    "bevy",
] }

# ----- External dependencies
bevy = { version = "0.17.0", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_camera",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_image",
    "bevy_window",
    "multi_threaded",
] }

# ----- Optional dependencies
